openmediavault (6.0.22-1) unstable; urgency=low

  *

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 06 Apr 2022 19:56:59 +0200

openmediavault (6.0.21-1) unstable; urgency=low

  * Fix issue in omv-mkaptidx which might cause an empty list in
    the updates and plugins page.
  * Issue #1269: Statically DNS servers will take precedence over
    the DNS servers received from the DHCP server.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 05 Apr 2022 19:26:48 +0200

openmediavault (6.0.20-2) unstable; urgency=low

  * Filter plugins whose container image do not support the host
    architecture.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 31 Mar 2022 17:41:00 +0200

openmediavault (6.0.19-2) unstable; urgency=low

  * Update locale files.
  * Many improvements.
  * Harden openmediavault-flush-mailq cron job to prevent postfix
    error messages.
  * Disable SMB NetBIOS support by default. You can enable it via the
    OMV_SAMBA_NMBD_ENABLE environment variable.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 23 Mar 2022 07:15:22 +0100

openmediavault (6.0.18-1) unstable; urgency=low

  * Quote names in quota SLS to support blanks in user/group names.
  * Issue #1247: Get network interface statistics via API.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 14 Mar 2022 21:02:13 +0100

openmediavault (6.0.17-1) unstable; urgency=low

  * Display a hint on the performance statistic pages when the
    system monitoring is disabled.
  * Disable MX lookup by default when sending emails.
    This can be enabled by setting the environment variable
    OMV_POSTFIX_MAIN_RELAYHOST_MXLOOKUP_ENABLE to 'yes'.
  * Issue #1236: Reduce CPU utilization on login page.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 05 Mar 2022 23:43:56 +0100

openmediavault (6.0.16-1) unstable; urgency=low

  * Update locale files.
  * Monitor bridge network interfaces and generate diagnostic graphs.