@@ -1,4 +1,4 @@
 {{ pillar['headers']['multiline'] -}}
-{%- for user in config.users.user -%}
+{%- for user in config | get('users.user', []) -%}
 {{ user.name }}:{{ user.password }}
 {%- endfor -%}
